--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
                 </ul>
             </nav>
         </div>
+        <section class="presentation-container">
+            <div class="presentation-content">
+                <h1>Olá, eu sou David Bissaco</h1>
+                <p>Desenvolvedor Full Stack Junior</p>
+            </div>
+            <div class="photo-content">
+                <img src="./src/minha-foto.svg" alt="Foto de David Bissaco">
+            </div>
+        </section>
     </header>
     <script src="./scripts/script.js"></script>
 </body>
