--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
             <div class="presentation-content">
                 <h1>Olá, eu sou David Bissaco</h1>
                 <p>Desenvolvedor Full Stack Junior</p>
+                <button class="presentation-button" type="button">Contatos</button>
             </div>
             <div class="photo-content">
-                <img src="./src/minha-foto.svg" alt="Foto de David Bissaco">
+                <img src="./src/minha-foto.png" alt="Foto de David Bissaco">
             </div>
         </section>
     </header>
