about-me  ready

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="styles/vars.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/vars.css">
     <link rel="stylesheet" href="./styles/media-queries.css">
     <title>David Bissaco</title>
 </head>
@@ -40,9 +42,22 @@
                 <button class="presentation-button" type="button">Contatos</button>
             </div>
             <div class="photo-content">
-                <img src="./src/minha-foto.png" alt="Foto de David Bissaco">
+                <img src="./src/minha-foto.svg" alt="Foto de David Bissaco">
             </div>
         </section>
+        <main class="about-me">
+            <div class="about">
+                <h2>
+                    Sobre mim</br>
+                    <span>Sou um Desenvolvedor Fullstack Junior</span>
+                </h2>
+                <p>Me chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
+                    Tenho conhecimento Fullstack com Java, Git, HTML, CSS e JavaScript, com foco em desenvolvimento e
+                    boas práticas de programação.</br>
+                    Atualmente, estou em transição de carreira e busco uma oportunidade como
+                    profissional júnior ou trainee na área de Tecnologia e Desenvolvimento de Software.</p>
+            </div>
+        </main>
     </header>
     <script src="./scripts/script.js"></script>
 </body>
