implementing presentation links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/vars.css">
     <link rel="stylesheet" href="./styles/media-queries.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>David Bissaco</title>
 </head>
 
@@ -39,7 +40,11 @@
             <div class="presentation-content">
                 <h1>Olá, eu sou David Bissaco</h1>
                 <p>Desenvolvedor Full Stack Junior</p>
-                <button class="presentation-button" type="button">Contatos</button>
+                <span>
+                    <button class="presentation-button" type="button">Contatos</button>
+                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                </span>
             </div>
             <div class="photo-content">
                 <img src="./src/minha-foto.svg" alt="Foto de David Bissaco">
