container skills included

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/skills.css">
     <link rel="stylesheet" href="./styles/vars.css">
     <link rel="stylesheet" href="./styles/media-queries.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>David Bissaco</title>
 </head>
@@ -50,20 +52,39 @@
                 <img src="./src/minha-foto.svg" alt="Foto de David Bissaco">
             </div>
         </section>
-        <main class="about-me">
-            <div class="about">
-                <h2>
-                    Sobre mim</br>
-                    <span>Sou um Desenvolvedor Fullstack Junior</span>
-                </h2>
-                <p>Me chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
-                    Tenho conhecimento Fullstack com Java, Git, HTML, CSS e JavaScript, com foco em desenvolvimento e
-                    boas práticas de programação.</br>
-                    Atualmente, estou em transição de carreira e busco uma oportunidade como
-                    profissional júnior ou trainee na área de Tecnologia e Desenvolvimento de Software.</p>
-            </div>
-        </main>
     </header>
+    <main class="about-me">
+        <div class="about">
+            <h2>
+                Sobre mim</br>
+                <span>Sou um Desenvolvedor Fullstack</span>
+            </h2>
+            <p>Me chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
+                Tenho conhecimento Fullstack com Java, Git, HTML, CSS e JavaScript, com foco em desenvolvimento e
+                boas práticas de programação.</br>
+                Atualmente, estou em transição de carreira e busco uma oportunidade como
+                profissional júnior ou trainee na área de Tecnologia e Desenvolvimento de Software.</p>
+        </div>
+    </main>
+    <article class="skills">
+        <section class="hard-skills">
+            <i id="java" class='bx bxl-java'></i>
+            <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="git" class='bx bxl-git'></i>
+            <i id="github" class='bx bxl-github'></i>
+            <i id="html" class='bx bxl-html5'></i>
+            <i id="css" class='bx bxl-css3'></i>
+            <!-- Icones Duplicados para efeito rolagem -->
+            <i id="java" class='bx bxl-java'></i>
+            <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="git" class='bx bxl-git'></i>
+            <i id="github" class='bx bxl-github'></i>
+            <i id="html" class='bx bxl-html5'></i>
+            <i id="css" class='bx bxl-css3'></i>
+        </section>
+    </article>
     <script src="./scripts/script.js"></script>
 </body>
 
