--- a/index.html
+++ b/index.html
@@ -83,8 +83,47 @@
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
             <i id="css" class='bx bxl-css3'></i>
+            <!-- Icones Triplicados para efeito rolagem -->
+            <i id="java" class='bx bxl-java'></i>
+            <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="git" class='bx bxl-git'></i>
+            <i id="github" class='bx bxl-github'></i>
+            <i id="html" class='bx bxl-html5'></i>
+            <i id="css" class='bx bxl-css3'></i>
         </section>
     </article>
+    <section class="container-projects">
+        <div class="projects">
+            <div class="project-content">
+                <img src="./src/print-spotify-dev.png" alt="Spotify Dev">
+                <div class="content">
+                    <span>
+                        <h3>Spotify Dev</h3>
+                        <div class="icons">
+                            <i id="node" class='bx bxl-nodejs'></i>
+                            <i id="javascript" class='bx bxl-javascript'></i>
+                            <i id="html" class='bx bxl-html5' ></i>
+                            <i id="css" class='bx bxl-css3' ></i>
+                        </div>
+                    </span>
+                    <p>Uma API Réplica do Spotify onde a ideia é criar um website igual o Spotify com a interação de
+                        busca dos artistas que nós gostamos, usei o json.server para injetar alguns artistas para que a
+                        API pudesse consumir. O site está responsivo e para melhor experiência dos usuários de
+                        dispositivos móveis eu
+                        implementei um Mobile Button, usando media-queries para que quando for visto a página de uma
+                        tela menor, não fique mostrando aquele excesso de informações.
+                    </p>
+                    <div class="buttons">
+                        <button>Ver Projeto</button>
+                        <button>Repositório Git</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-content"></div>
+            <div class="project-content"></div>
+        </div>
+    </section>
     <script src="./scripts/script.js"></script>
 </body>
 
