--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <div class="icons">
                             <i id="node" class='bx bxl-nodejs'></i>
                             <i id="javascript" class='bx bxl-javascript'></i>
-                            <i id="html" class='bx bxl-html5' ></i>
-                            <i id="css" class='bx bxl-css3' ></i>
+                            <i id="html" class='bx bxl-html5'></i>
+                            <i id="css" class='bx bxl-css3'></i>
                         </div>
                     </span>
                     <p>Uma API Réplica do Spotify onde a ideia é criar um website igual o Spotify com a interação de
@@ -114,6 +114,26 @@
                         implementei um Mobile Button, usando media-queries para que quando for visto a página de uma
                         tela menor, não fique mostrando aquele excesso de informações.
                     </p>
+                    <div class="buttons">
+                        <button>Ver Projeto</button>
+                        <button>Repositório Git</button>
+                    </div>
+                </div>
+            </div>
+            <div class="project-content">
+                <img src="./src/print-dslist-backend.png" alt="DSlist Backend">
+                <div class="content">
+                    <span>
+                        <h3>DSlist Backend</h3>
+                        <div class="icons">
+                            <i id="java" class='bx bxl-java' ></i>
+                            <i id="spring" class='bx bxl-spring-boot' ></i>
+                        </div>
+                    </span>
+                    <p>O DSlist tem o intuito de funcionar como se fosse um colecionador de jogos, foi implementado com
+                        Java e Spring boot o sistema com endpoints para consultar os jogos totais do banco, jogos por
+                        id, listas de categorias de jogos, jogos por listas e também foi implementado um endpoint capaz
+                        de mover a ordem dos jogos no banco de dados sem afetar suas posições e organização.</p>
                     <div class="buttons">
                         <button>Ver Projeto</button>
                         <button>Repositório Git</button>
