upload one more project, footer included

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/main.css">
     <link rel="stylesheet" href="./styles/skills.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="./styles/vars.css">
     <link rel="stylesheet" href="./styles/media-queries.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -126,8 +127,8 @@
                     <span>
                         <h3>DSlist Backend</h3>
                         <div class="icons">
-                            <i id="java" class='bx bxl-java' ></i>
-                            <i id="spring" class='bx bxl-spring-boot' ></i>
+                            <i id="java" class='bx bxl-java'></i>
+                            <i id="spring" class='bx bxl-spring-boot'></i>
                         </div>
                     </span>
                     <p>O DSlist tem o intuito de funcionar como se fosse um colecionador de jogos, foi implementado com
@@ -140,10 +141,41 @@
                     </div>
                 </div>
             </div>
-            <div class="project-content"></div>
-            <div class="project-content"></div>
+            <div class="project-content">
+                <img src="./src/print-yskynao-site.png" alt="Restaurante Yskynão">
+                <div class="content">
+                    <span>
+                        <h3>Restaurante Yskynão</h3>
+                        <div class="icons">
+                            <i id="html" class='bx bxl-html5'></i>
+                            <i id="css" class='bx bxl-css3'></i>
+                            <i id="javascript" class='bx bxl-javascript'></i>
+                        </div>
+                    </span>
+                    <p>O site foi projeto para um restaurante real para ajudar o restaurante a conseguir mais clientes
+                        sem taxa de outras empresas, melhorar seu marketing e possuir um acesso mais fácil para os
+                        clientes.
+                        Contem apresentação, navegação com links para contato dos usuários, cardápio e avaliações reais
+                        de clientes.
+                        O projeto foi feito com HTML, CSS e JavaScript.</p>
+                    <div class="buttons">
+                        <button>Ver Projeto</button>
+                        <button>Repositório Git</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="contact">
+        <div class="contact-content">
+            <h2>Meus Contatos</h2>
+            <ul>
+                <li><i id="email" class='bx bxl-gmail'></i>davidbissacodasilva@gmail.com</li>
+                <li><i id="phone" class='bx bxs-phone' ></i>(11) 9 6649-9788</li>
+                <li><i id="linkedin" class='bx bxl-linkedin' ></i>David Bissaco da Silva</li>
+                <li><i id="github" class='bx bxl-github' ></i>davidbs09</li>
+            </ul>
+        </div>
     <script src="./scripts/script.js"></script>
 </body>
 
