--- a/index.html
+++ b/index.html
@@ -170,13 +170,27 @@
         <div class="contact-content">
             <h2>Meus Contatos</h2>
             <ul>
-                <li><i id="email" class='bx bxl-gmail'></i>davidbissacodasilva@gmail.com</li>
-                <li><i id="phone" class='bx bxs-phone' ></i>(11) 9 6649-9788</li>
-                <li><i id="linkedin" class='bx bxl-linkedin' ></i>David Bissaco da Silva</li>
-                <li><i id="github" class='bx bxl-github' ></i>davidbs09</li>
+                <li>
+                    <i id="email" class='bx bxl-gmail'></i>
+                    <span>
+                    davidbissacodasilva@gmail.com
+                    </span>
+                </li>
+                <li>
+                    <i id="phone" class='bx bxs-phone'></i>
+                    (11) 9 6649-9788
+                </li>
+                <li>
+                    <i id="linkedin" class='bx bxl-linkedin'></i>
+                    David Bissaco da Silva
+                </li>
+                <li>
+                    <i id="github" class='bx bxl-github'></i>
+                    davidbs09
+                </li>
             </ul>
         </div>
-    <script src="./scripts/script.js"></script>
+        <script src="./scripts/script.js"></script>
 </body>
 
 </html>
