Main, header and footer update

--- a/index.html
+++ b/index.html
@@ -170,24 +170,38 @@
         <div class="contact-content">
             <h2>Meus Contatos</h2>
             <ul>
-                <li>
-                    <i id="email" class='bx bxl-gmail'></i>
-                    <span>
-                    davidbissacodasilva@gmail.com
-                    </span>
-                </li>
-                <li>
-                    <i id="phone" class='bx bxs-phone'></i>
-                    (11) 9 6649-9788
-                </li>
-                <li>
-                    <i id="linkedin" class='bx bxl-linkedin'></i>
-                    David Bissaco da Silva
-                </li>
-                <li>
-                    <i id="github" class='bx bxl-github'></i>
-                    davidbs09
-                </li>
+                <a href="mailto:davidbissacodasilva@gmail.com" target="_blank">
+                    <li>
+                        <i id="email" class='bx bxl-gmail'></i>
+                        <span>
+                            davidbissacodasilva@gmail.com
+                        </span>
+                    </li>
+                </a>
+                <a href="tel:+5511966499788">
+                    <li>
+                        <i id="phone" class='bx bxs-phone'></i>
+                        <span>
+                            (11) 9 6649-9788
+                        </span>
+                    </li>
+                </a>
+                <a href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/" target="_blank">
+                    <li>
+                        <i id="linkedin" class='bx bxl-linkedin'></i>
+                        <span>
+                            David Bissaco da Silva
+                        </span>
+                    </li>
+                </a>
+                <a href="https://github.com/davidbs09" target="_blank">
+                    <li>
+                        <i id="github" class='bx bxl-github'></i>
+                        <span>
+                            davidbs09
+                        </span>
+                    </li>
+                </a>
             </ul>
         </div>
         <script src="./scripts/script.js"></script>
