--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
                 <h1>Olá, eu sou David Bissaco</h1>
                 <p>Desenvolvedor Full Stack Junior</p>
                 <span>
-                    <button class="presentation-button" type="button">Contatos</button>
-                    <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
+                    <button class="presentation-button"><a class="text-button" href="#contact">Contatos</a></button>
+                    <a class="home-links" href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/" target="_blank"><i
+                            class="fa-brands fa-linkedin-in"></i></a>
+                    <a class="home-links" href="https://github.com/davidbs09" target="_blank"><i class="fa-brands fa-github"></i></a>
                 </span>
             </div>
             <div class="photo-content">
@@ -116,8 +117,10 @@
                         tela menor, não fique mostrando aquele excesso de informações.
                     </p>
                     <div class="buttons">
-                        <button><a href="https://spotify-dev-davidbs09.netlify.app/" target="_blank">Projeto</a></button>
-                        <button><a href="https://github.com/davidbs09/spotifyPage-js" target="_blank">Repositório Git</a></button>
+                        <button><a href="https://spotify-dev-davidbs09.netlify.app/"
+                                target="_blank">Projeto</a></button>
+                        <button><a href="https://github.com/davidbs09/spotifyPage-js" target="_blank">Repositório
+                                Git</a></button>
                     </div>
                 </div>
             </div>
@@ -137,7 +140,8 @@
                         de mover a ordem dos jogos no banco de dados sem afetar suas posições e organização.</p>
                     <div class="buttons">
                         <button><a href="">Projeto</a></button>
-                        <button><a href="https://github.com/davidbs09/dslist-backend" target="_blank">Repositório Git</a></button>
+                        <button><a href="https://github.com/davidbs09/dslist-backend" target="_blank">Repositório
+                                Git</a></button>
                     </div>
                 </div>
             </div>
@@ -205,8 +209,8 @@
             </ul>
         </div>
     </footer>
-        <button id="back-to-top" class="back-to-top">Voltar ao Topo</button>
-        <script src="./scripts/script.js"></script>
+    <button id="back-to-top" class="back-to-top">Voltar ao Topo</button>
+    <script src="./scripts/script.js"></script>
 </body>
 
 </html>
