--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/header.css">
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="stylesheet" href="./styles/skills.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="./styles/vars.css">
-    <link rel="stylesheet" href="./styles/media-queries.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>David Bissaco</title>
@@ -45,9 +39,10 @@
                 <p>Desenvolvedor Full Stack Junior</p>
                 <span>
                     <button class="presentation-button"><a class="text-button" href="#contact">Contatos</a></button>
-                    <a class="home-links" href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/" target="_blank"><i
-                            class="fa-brands fa-linkedin-in"></i></a>
-                    <a class="home-links" href="https://github.com/davidbs09" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a class="home-links" href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/"
+                        target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a class="home-links" href="https://github.com/davidbs09" target="_blank"><i
+                            class="fa-brands fa-github"></i></a>
                 </span>
             </div>
             <div class="photo-content">
@@ -139,7 +134,7 @@
                         id, listas de categorias de jogos, jogos por listas e também foi implementado um endpoint capaz
                         de mover a ordem dos jogos no banco de dados sem afetar suas posições e organização.</p>
                     <div class="buttons">
-                        <button><a href="">Projeto</a></button>
+                        <button><a href="" target="_blank">Projeto</a></button>
                         <button><a href="https://github.com/davidbs09/dslist-backend" target="_blank">Repositório
                                 Git</a></button>
                     </div>
@@ -163,8 +158,9 @@
                         de clientes.
                         O projeto foi feito com HTML, CSS e JavaScript.</p>
                     <div class="buttons">
-                        <button><a href="">Projeto</a></button>
-                        <button><a href="">Repositório Git</a></button>
+                        <button><a href="" target="_blank">Projeto</a></button>
+                        <button><a href="https://github.com/davidbs09/RestauranteYskynao" target="_blank">Repositório
+                                Git</a></button>
                     </div>
                 </div>
             </div>
