resolving buttons bugs

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1>Olá, eu sou David Bissaco</h1>
                 <p>Desenvolvedor Full Stack Junior</p>
                 <span>
-                    <button class="presentation-button"><a class="text-button" href="#contact">Contatos</a></button>
+                    <button class="presentation-button" onclick="scrollToSection('contatos'), '_blank'">Contatos</button>
                     <a class="home-links" href="https://www.linkedin.com/in/david-bissaco-da-silva-b644a2272/"
                         target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     <a class="home-links" href="https://github.com/davidbs09" target="_blank"><i
@@ -112,10 +112,8 @@
                         tela menor, não fique mostrando aquele excesso de informações.
                     </p>
                     <div class="buttons">
-                        <button><a href="https://spotify-dev-davidbs09.netlify.app/"
-                                target="_blank">Projeto</a></button>
-                        <button><a href="https://github.com/davidbs09/spotifyPage-js" target="_blank">Repositório
-                                Git</a></button>
+                        <button onclick="window.open('https://spotify-dev-davidbs09.netlify.app/', '_blank')">Projeto</button>
+                        <button onclick="window.open('https://github.com/davidbs09/spotifyPage-js', '_blank')">Repositório Git</button>
                     </div>
                 </div>
             </div>
@@ -133,11 +131,10 @@
                         Java e Spring boot o sistema com endpoints para consultar os jogos totais do banco, jogos por
                         id, listas de categorias de jogos, jogos por listas e também foi implementado um endpoint capaz
                         de mover a ordem dos jogos no banco de dados sem afetar suas posições e organização.</p>
-                    <div class="buttons">
-                        <button><a href="" target="_blank">Projeto</a></button>
-                        <button><a href="https://github.com/davidbs09/dslist-backend" target="_blank">Repositório
-                                Git</a></button>
-                    </div>
+                        <div class="buttons">
+                            <button onclick="window.open('https://www.linkedin.com/posts/david-bissaco-da-silva-b644a2272_boa-noite-tudo-bem-hoje-venho-apresentar-activity-7300287714338205697-SoBc?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEKizfwBSOI_J-oeXJPY-ZLIUwGd5nit0yg', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://github.com/davidbs09/dslist-backend', '_blank')">Repositório Git</button>
+                        </div>
                 </div>
             </div>
             <div class="project-content">
@@ -157,11 +154,10 @@
                         Contem apresentação, navegação com links para contato dos usuários, cardápio e avaliações reais
                         de clientes.
                         O projeto foi feito com HTML, CSS e JavaScript.</p>
-                    <div class="buttons">
-                        <button><a href="" target="_blank">Projeto</a></button>
-                        <button><a href="https://github.com/davidbs09/RestauranteYskynao" target="_blank">Repositório
-                                Git</a></button>
-                    </div>
+                        <div class="buttons">
+                            <button onclick="window.open('https://restaurante-yskynao.netlify.app/', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://github.com/davidbs09/RestauranteYskynao', '_blank')">Repositório Git</button>
+                        </div>
                 </div>
             </div>
         </div>
