one more project included

--- a/index.html
+++ b/index.html
@@ -116,6 +116,27 @@
                 </div>
             </div>
             <div class="project-content">
+                <img src="./src/print-weather-forecast.png" alt="Previsão do Tempo">
+                <div class="content">
+                    <span>
+                        <h3>Previsão do Tempo</h3>
+                        <div class="icons">
+                            <i id="html" class='bx bxl-html5'></i>
+                            <i id="css" class='bx bxl-css3'></i>
+                            <i id="javascript" class='bx bxl-javascript'></i>
+                        </div>
+                    </span>
+                    <p>Aplicativo com possui a ideia de mostrar a previsão do tempo para os usuários
+                        de uma forma mais simples e objetiva. Possui conexão com a API OpenWeatherMap para 
+                        obter informções completas de previsão daquela cidade/estado que o usuário pesquisar.
+                    </p>
+                        <div class="buttons">
+                            <button onclick="window.open('https://weather-forecast-db9.netlify.app/', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://https://github.com/davidbs09/weather-forecast', '_blank')">Repositório Git</button>
+                        </div>
+                </div>
+            </div>
+            <div class="project-content">
                 <img src="./src/print-spotify-dev.png" alt="Spotify Dev">
                 <div class="content">
                     <span>
