--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
                     </span>
                     <p>Aplicativo com possui a ideia de mostrar a previsão do tempo para os usuários
                         de uma forma mais simples e objetiva. Possui conexão com a API OpenWeatherMap para 
-                        obter informções completas de previsão daquela cidade/estado que o usuário pesquisar.
+                        obter informações completas de previsão daquela cidade/estado que o usuário pesquisar.
                     </p>
                         <div class="buttons">
-                            <button onclick="window.open('https://weather-forecast-db9.netlify.app/', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://github.com/davidbs09/weather-forecast', '_blank')">Projeto</button>
                             <button onclick="window.open('https://https://github.com/davidbs09/weather-forecast', '_blank')">Repositório Git</button>
                         </div>
                 </div>
