--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                         obter informações completas de previsão daquela cidade/estado que o usuário pesquisar.
                     </p>
                         <div class="buttons">
-                            <button onclick="window.open('https://github.com/davidbs09/weather-forecast', '_blank')">Projeto</button>
-                            <button onclick="window.open('https://https://github.com/davidbs09/weather-forecast', '_blank')">Repositório Git</button>
+                            <button onclick="window.open('https://weather-forecast-db9.netlify.app', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://github.com/davidbs09/weather-forecast', '_blank')">Repositório Git</button>
                         </div>
                 </div>
             </div>
