update about me

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
                 Sobre mim</br>
                 <span>Sou um Desenvolvedor Fullstack</span>
             </h2>
-            <p>Me chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
-                Tenho conhecimento Fullstack com Java, Git, HTML, CSS e JavaScript, com foco em desenvolvimento e
+            <p>ﾠMe chamo David, tenho 19 anos e sou estudante de Análise e Desenvolvimento de Sistemas.</br>
+                Tenho conhecimento Fullstack com Java, Git, HTML, CSS, JavaScript, TypeScript e Angular com foco em desenvolvimento e
                 boas práticas de programação.</br>
-                Atualmente, estou em transição de carreira e busco uma oportunidade como
+                ﾠEstou estudando sobre Node.js e PostgreSQL.</br>
+                ﾠAtualmente, estou em transição de carreira e busco uma oportunidade como
                 profissional júnior ou trainee na área de Tecnologia e Desenvolvimento de Software.</p>
         </div>
     </main>
