--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
         <section class="hard-skills">
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="angular" class='bx bxl-angular'></i>
+            <i id="typescript" class='bx bxl-typescript' ></i>
             <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="nodejs" class='bx bxl-nodejs' ></i>
+            <i id="postgresql" class='bx bxl-postgresql' ></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -76,7 +80,11 @@
             <!-- Icones Duplicados para efeito rolagem -->
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="angular" class='bx bxl-angular'></i>
+            <i id="typescript" class='bx bxl-typescript' ></i>
             <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="nodejs" class='bx bxl-nodejs' ></i>
+            <i id="postgresql" class='bx bxl-postgresql' ></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -84,7 +92,11 @@
             <!-- Icones Triplicados para efeito rolagem -->
             <i id="java" class='bx bxl-java'></i>
             <i id="spring" class='bx bxl-spring-boot'></i>
+            <i id="angular" class='bx bxl-angular'></i>
+            <i id="typescript" class='bx bxl-typescript' ></i>
             <i id="javascript" class='bx bxl-javascript'></i>
+            <i id="nodejs" class='bx bxl-nodejs' ></i>
+            <i id="postgresql" class='bx bxl-postgresql' ></i>
             <i id="git" class='bx bxl-git'></i>
             <i id="github" class='bx bxl-github'></i>
             <i id="html" class='bx bxl-html5'></i>
@@ -93,6 +105,29 @@
     </article>
     <section id="projects" class="container-projects">
         <div class="projects">
+            <div class="project-content">
+                <img src="./src/print-yskynao-site.png" alt="Restaurante Yskynão">
+                <div class="content">
+                    <span>
+                        <h3>Restaurante Santa Fé</h3>
+                        <div class="icons">
+                            <i id="html" class='bx bxl-html5'></i>
+                            <i id="css" class='bx bxl-css3'></i>
+                            <i id="javascript" class='bx bxl-javascript'></i>
+                        </div>
+                    </span>
+                    <p>O site foi projeto para um restaurante real para ajudar o restaurante a conseguir mais clientes
+                        sem taxa de outras empresas, melhorar seu marketing e possuir um acesso mais fácil para os
+                        clientes.
+                        Contem apresentação, navegação com links para contato dos usuários, cardápio e avaliações reais
+                        de clientes.
+                        O projeto foi feito com HTML, CSS e JavaScript.</p>
+                        <div class="buttons">
+                            <button onclick="window.open('https://restaurante-yskynao.netlify.app/', '_blank')">Projeto</button>
+                            <button onclick="window.open('https://github.com/davidbs09/RestauranteYskynao', '_blank')">Repositório Git</button>
+                        </div>
+                </div>
+            </div>
             <div class="project-content">
                 <img src="./src/print-yskynao-site.png" alt="Restaurante Yskynão">
                 <div class="content">
